--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,10 @@
       integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
       crossorigin="anonymous"
     />
+    <script
+      src="https://kit.fontawesome.com/36d247554f.js"
+      crossorigin="anonymous"
+    ></script>
     <meta charset="utf-8" />
     <title>WalletProject</title>
     <base href="/" />
